k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: exporter-sample
  namespace: uc-istio-system
spec:
  type: ClusterIP
  selector:
    app: exporter-sample
  ports:
  - name: exporter-sample
    port: 9080
    targetPort: 9080
    protocol: TCP
