k8s-manifests/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telemetory-vs 
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /uc/jaeger
    route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /uc/prometheus/
    - uri:
        prefix: /uc/prometheus
    rewrite:
      uri: /uc/prometheus/
    route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
  - match:
    - uri:
        prefix: /uc/grafana/
    - uri:
        prefix: /uc/grafana
    rewrite:
      uri: /
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
  - match:
    - uri:
        prefix: /uc/api/v1
    route:
    - destination:
        host: kubernetes-dashboard.kube-system.svc.cluster.local
        port:
          number: 8001
  - match:
    - uri:
        prefix: /uc/kiali/
    - uri:
        prefix: /uc/kiali
    rewrite:
      uri: /uc/kiali/
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
